--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="app"></div>
 
-    <!-- <div id="fb-root"></div>
+    <div id="fb-root"></div>
     <div id="fb-customer-chat" class="fb-customerchat"></div>
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
@@ -32,7 +32,7 @@
         js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
-    </script> -->
+    </script>
 
     <script type="module" src="/src/main.js"></script>
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
